fix on portfolio.html for mobile view

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,35 +49,35 @@
             </div>
             <div class="row">
                 <div class="col-md-10 main-content">
-                    <div class="col-md-5 float-left">
+                    <div class="col-md-5 float-left portfolio-item">
                         <img src="assets/images/portfolio-img1.jpeg" alt="Hangman" class="img-thumbnail" width="350" height="250">
                         <div class="image-label">
                             Hangman
                         </div>
                     </div>
 
-                    <div class="col-md-5 float-left">
+                    <div class="col-md-5 float-left portfolio-item">
                         <img src="assets/images/portfolio-img2.jpeg" alt="RPG Game" class="img-thumbnail" width="350" height="250">
                         <div class="image-label">
                             RPG Game
                         </div>
                     </div>
 
-                    <div class="col-md-5 float-left">
+                    <div class="col-md-5 float-left portfolio-item">
                         <img src="assets/images/portfolio-img3.jpeg" alt="Trivia Game" class="img-thumbnail" width="350" height="250">
                         <div class="image-label">
                             Trivia Game
                         </div>
                     </div>
 
-                    <div class="col-md-5 float-left">
+                    <div class="col-md-5 float-left portfolio-item">
                         <img src="assets/images/portfolio-img4.jpeg" alt="Penn Info Widget" class="img-thumbnail" width="350" height="250">
                         <div class="image-label">
                             Penn Info Widget
                         </div>
                     </div>
 
-                    <div class="col-md-5 float-left">
+                    <div class="col-md-5 float-left portfolio-item">
                         <img src="assets/images/portfolio-img5.jpeg" alt="Rock Paper Scissors" class="img-thumbnail" width="350" height="250">
                         <div class="image-label">
                             Rock Paper Scissors
